--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-59.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-59.yml
@@ -13,88 +13,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # This is required for actions/checkout
+      contents: read #This is required for actions/checkout
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build application
-        env:
-          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
+      - name: npm install, build, and test
         run: |
-          if npm run build --silent 2>/dev/null; then
-            echo "Build completed successfully"
-          else
-            echo "Build script not found or failed"
-            exit 1
-          fi
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
-      - name: Run tests (if available)
-        run: |
-          if npm run test --silent 2>/dev/null; then
-            echo "Tests completed successfully"
-          else
-            echo "No test script found or tests failed - continuing deployment"
-          fi
-        continue-on-error: true
-
-      - name: Prepare deployment package
-        run: |
-          echo "Preparing deployment files..."
-          mkdir -p deploy/.next
-          
-          # Copy standalone build files
-          if [ -d ".next/standalone" ]; then
-            cp -r .next/standalone/* deploy/
-            echo "Copied standalone files"
-          else
-            echo "Error: .next/standalone directory not found"
-            exit 1
-          fi
-          
-          # Copy static files
-          if [ -d ".next/static" ]; then
-            cp -r .next/static deploy/.next/static
-            echo "Copied static files"
-          else
-            echo "Warning: .next/static directory not found"
-          fi
-          
-          # Copy public files (if they exist)
-          if [ -d "public" ]; then
-            cp -r public deploy/public
-            echo "Copied public files"
-          else
-            echo "No public directory found"
-          fi
-          
-          # List deployed files for verification
-          echo "Deployment package contents:"
-          ls -la deploy/
-
-      - name: Create deployment archive
-        run: |
-          cd deploy
-          zip -r ../release.zip .
-          cd ..
-          echo "Archive created: $(ls -lh release.zip)"
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: release.zip
-          retention-days: 1
 
   deploy:
     runs-on: ubuntu-latest
@@ -109,22 +51,14 @@ jobs:
         with:
           name: node-app
 
-      - name: Extract deployment package
-        run: |
-          unzip release.zip -d deploy
-          echo "Extracted files:"
-          ls -la deploy/
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'app-001-step3-1-suzuyu-node-59'
           slot-name: 'Production'
-          package: ./deploy
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C3BBF4D04B664D268D22F97475190E06 }}
-
-      - name: Deployment summary
-        run: |
-          echo "🚀 Deployment completed successfully!"
-          echo "App URL: ${{ steps.deploy-to-webapp.outputs.webapp-url }}"
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8C74190D245C4A549F24F906477E8337 }}
