--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-59.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-59.yml
@@ -24,23 +24,13 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
-      #1
-        env:
-          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
 
-      #2
-      - name: Copy artifact for deployment job
-        run: |
-          mkdir deploy
-          cp -r ./.next/standalone/. ./deploy
-          cp -r ./.next/static/. ./deploy/.next/static
-
       - name: Zip artifact for deployment
-        run: zip release.zip ./deploy -r #3
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -70,5 +60,5 @@ jobs:
         with:
           app-name: 'app-001-step3-1-suzuyu-node-59'
           slot-name: 'Production'
-          package: ./deploy #4
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C3BBF4D04B664D268D22F97475190E06 }}
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8F6C8A8DCAEE4669B3A78801664E4F59 }}
